# clin_matcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
docs/: targets.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ClarificationForm.tsx  Header.tsx  PatientInput.tsx  ProgressIndicator.tsx  TraceViewer.tsx  TrialCard.tsx
frontend/src/lib/: api.ts  types.ts
src/: __main__.py  server.py
src/eval/: evaluators.py  run_evals.py
src/eval/datasets/: eval_cases.json
src/graph/: graph.py  state.py
src/graph/nodes/: eligibility.py  human_review.py  intake.py  ranker.py  search.py
src/prompts/: eligibility.py  intake.py  ranker.py  registry.py
src/tools/: clinical_trials_api.py
src/utils/: retry.py
tests/: conftest.py  test_api_client.py  test_e2e.py  test_eligibility.py  test_intake.py  test_ranker.py  test_routing.py  test_search.py
